...
//                graphql.createUser(id: sessionManager.userID, givenName: sessionManager.givenName, familyName: sessionManager.familyName, phoneNumber: sessionManager.phoneNumber)
            } else {
                message = "Please fill in all the field"
                showAlert = true
            }
        }){
            Text("Sign in")
                .foregroundColor(.white)
                .fontWeight(.semibold)
                .frame(width: 350, height: 40.0)
                .background(Color.orange)
                .clipShape(RoundedRectangle(cornerRadius: 5))
        }.alert(isPresented: $showAlert){
...
        } label: {
            Text("forget password?")
                .foregroundColor(.blue)
        }
        .padding(.bottom, 15)
        
        Button("Don't have an account? Sign Up", action: {
            sessionManager.showSignUp()
        })
        
    }
    
    func login(phoneNumber: String, password: String){
...
