...
    
    @State var checked = false
    
    var body: some View {
        VStack(alignment: .center){
            Spacer()
            Text("Sign Up")
                .fontWeight(.semibold)
            
            Divider()
                .frame(width: 250, height: 1.0)
            
            Spacer()
...
